--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ html,body{
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 body{
 	display: flex;
@@ -31,16 +34,16 @@ body{
 .card-back .card{
 	width: 38.93333333vw;
     height: 62.4vw;
-    background-color: #919bac;
+    background-color: rgba(145, 155, 172, .9);
     display: inline-block;
     margin: 0 8.4vw;
-    border-radius: 6px;
+    border-radius: 8px;
 }
 .card-frond .card{
 	width: 60vw;
 	height: 96vw;
-	background-color: #fff;
+	background-color: rgba(255,255,255,.9);
 	display: inline-block;
-	border-radius: 8px;
+	border-radius: 10px;
 	margin: 0 4vw;
 }
